test-network-policy/niveau-namespace/denyall-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: test3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
